--- a/project-6/package.json
+++ b/project-6/package.json
@@ -12,5 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "truffle-assertions": "^0.9.2"
   }
 }
