--- a/project-6/package.json
+++ b/project-6/package.json
@@ -14,6 +14,7 @@
     "lite-server": "^2.6.1"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.2.1",
     "truffle-assertions": "^0.9.2"
   }
 }
